// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ResultList default 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "margin": "-0.5em",
    }
  }
>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Target Points for Parking
    </h3>
    <div
      style={
        Object {
          "flexBasis": "50%",
          "fontSize": "2em",
        }
      }
    />
    <div>
       
      points
    </div>
  </div>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Parking Requirement - Total
    </h3>
    <div
      style={
        Object {
          "flexBasis": "50%",
          "fontSize": "2em",
        }
      }
    />
    <div>
       
      spaces
    </div>
  </div>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Parking Requirement - Residential
    </h3>
    <div
      style={
        Object {
          "flexBasis": "50%",
          "fontSize": "2em",
        }
      }
    />
    <div>
       
      spaces
    </div>
  </div>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Parking Requirement - Commercial
    </h3>
    <div
      style={
        Object {
          "flexBasis": "50%",
          "fontSize": "2em",
        }
      }
    />
    <div>
       
      spaces
    </div>
  </div>
</div>
`;

exports[`Storyshots ResultView default 1`] = `
<div
  className="tdm-calculation-metrics-panel"
>
  <h3>
    Target Points for Parking
  </h3>
  <div
    style={
      Object {
        "flexBasis": "50%",
        "fontSize": "2em",
      }
    }
  >
    -1
  </div>
  <div>
     
    points
  </div>
</div>
`;

exports[`Storyshots RuleInput default Input Boolean (False) 1`] = `
<div
  style={
    Object {
      "alignItems": "baseline",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "margin": "0.2em",
    }
  }
>
  <div
    style={
      Object {
        "flexBasis": "75%",
        "flexGrow": "1",
        "flexShrink": "1",
      }
    }
  >
    Unbundle Parking from Rent
  </div>
  <input
    checked={false}
    name="UNBUNDLE_PARKING"
    onChange={[Function]}
    style={
      Object {
        "flexBasis": "5%",
        "flexGrow": "0",
        "flexShrink": "1",
      }
    }
    type="checkbox"
    value={true}
  />
  <div
    style={
      Object {
        "flexBasis": "10%",
        "flexGrow": "0",
        "flexShrink": "1",
        "marginLeft": "1em",
      }
    }
  >
    
  </div>
  <div
    style={
      Object {
        "flexBasis": "5%",
        "flexGrow": "0",
        "flexShrink": "1",
        "marginLeft": "1em",
        "marginRight": "0.5em",
      }
    }
  />
</div>
`;

exports[`Storyshots RuleInput default Input Boolean (True) 1`] = `
<div
  style={
    Object {
      "alignItems": "baseline",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "margin": "0.2em",
    }
  }
>
  <div
    style={
      Object {
        "flexBasis": "75%",
        "flexGrow": "1",
        "flexShrink": "1",
      }
    }
  >
    Unbundle Parking from Rent
  </div>
  <input
    checked={true}
    name="UNBUNDLE_PARKING"
    onChange={[Function]}
    style={
      Object {
        "flexBasis": "5%",
        "flexGrow": "0",
        "flexShrink": "1",
      }
    }
    type="checkbox"
    value={true}
  />
  <div
    style={
      Object {
        "flexBasis": "10%",
        "flexGrow": "0",
        "flexShrink": "1",
        "marginLeft": "1em",
      }
    }
  >
    
  </div>
  <div
    style={
      Object {
        "flexBasis": "5%",
        "flexGrow": "0",
        "flexShrink": "1",
        "marginLeft": "1em",
        "marginRight": "0.5em",
      }
    }
  />
</div>
`;

exports[`Storyshots RuleInput default Input Number 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "margin": "0.2em",
    }
  }
>
  <div
    style={
      Object {
        "flexBasis": "75%",
        "flexGrow": "1",
        "flexShrink": "1",
      }
    }
  >
    Sq Ft - Retail
  </div>
  <input
    name="SF_RETAIL"
    onChange={[Function]}
    style={
      Object {
        "flexBasis": "10%",
        "flexGrow": "0",
        "flexShrink": "1",
      }
    }
    type="number"
    value=""
  />
  <div
    style={
      Object {
        "flexBasis": "10%",
        "flexGrow": "0",
        "flexShrink": "1",
        "marginLeft": "1em",
      }
    }
  >
    sq ft
  </div>
  <div
    style={
      Object {
        "flexBasis": "5%",
        "flexGrow": "0",
        "flexShrink": "1",
        "marginLeft": "1em",
        "marginRight": "0.5em",
        "textAlign": "right",
      }
    }
  />
</div>
`;

exports[`Storyshots RuleList default 1`] = `
Array [
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Habitable Rooms &lt; 3
    </div>
    <input
      name="UNITS_HABIT_LT3"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Habitable Rooms = 3
    </div>
    <input
      name="UNITS_HABIT_3"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Habitable Rooms &gt; 3
    </div>
    <input
      name="UNITS_HABIT_GT3"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Guest Rooms &lt; 30
    </div>
    <input
      name="UNITS_GUEST_LT30"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      rooms
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Guest Rooms 30-60
    </div>
    <input
      name="UNITS_GUEST_30-60"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      rooms
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Guest Rooms &gt; 60
    </div>
    <input
      name="UNITS_GUEST_GT60"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      rooms
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Condos Units &lt; 6
    </div>
    <input
      name="UNITS_CONDO_LT6"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Condos Units &gt;= 6
    </div>
    <input
      name="UNITS_CONDO_GTE6"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Condo Units &gt;=6 (congested area)
    </div>
    <input
      name="UNITS_CONDO_CONGESTED"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # TOC-ABB 744 Mixed Income Bedrooms
    </div>
    <input
      name="UNITS_AB744_MIXED"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      bedroom
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # TOC-ABB 744 Affordable incl Sr.
    </div>
    <input
      name="UNITS_AB744_AFF_SR"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # TOC-ABB 744 Special Needs
    </div>
    <input
      name="UNITS_AB744_AFF_SPECIAL"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # TOC-ABB 744 Eligible Housing Development
    </div>
    <input
      name="UNITS_AB744_ELIGIBLE"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Density Bonus Opt 1 Bedrooms &lt;= 1
    </div>
    <input
      name="UNITS_DENSITY_OPT1_LTE1"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Density Bonus Opt 1 Bedrooms 2-3
    </div>
    <input
      name="UNITS_DENSITY_OPT1_2-3"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Density Bonus Opt 1 Bedrooms GTE4
    </div>
    <input
      name="UNITS_DENSITY_OPT1_GTE4"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Density Bonus Opt 2 Restricted Unit
    </div>
    <input
      name="UNITS_DENSITY_OPT2_RESTRICTED"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Density Bonus Opt 2 Disabled
    </div>
    <input
      name="UNITS_DENSITY_OPT2_DISABLED"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Density Bonus Opt 2 Residential Hotel
    </div>
    <input
      name="UNITS_DENSITY_OPT2_HOTEL"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Senior Independent Housing
    </div>
    <input
      name="UNITS_SR_INDEPENDENT"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Assisted Living Care Unit
    </div>
    <input
      name="UNITS_SR_ASSISTED"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      dwelling units
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Assisted Living Care Guest Rooms
    </div>
    <input
      name="UNITS_SR_ASSISTED_GUEST"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      guest rm
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Skilled Nursing Care Housing Beds
    </div>
    <input
      name="UNITS_SKILLED_NURSING"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      guest bed
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": "0.2em",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "75%",
          "flexGrow": "1",
          "flexShrink": "1",
        }
      }
    >
      # Alzheimer's / Dementia Care Housing
    </div>
    <input
      name="UNITS_DEMENTIA"
      onChange={[Function]}
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
        }
      }
      type="number"
      value=""
    />
    <div
      style={
        Object {
          "flexBasis": "10%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
        }
      }
    >
      guest bed
    </div>
    <div
      style={
        Object {
          "flexBasis": "5%",
          "flexGrow": "0",
          "flexShrink": "1",
          "marginLeft": "1em",
          "marginRight": "0.5em",
          "textAlign": "right",
        }
      }
    />
  </div>,
]
`;

exports[`Storyshots RulePanels default 1`] = `
Array [
  <fieldset
    style={
      Object {
        "margin": "0.75em",
      }
    }
  >
    <legend>
      <h4>
        Land Use - Residential
      </h4>
       
    </legend>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Habitable Rooms &lt; 3
      </div>
      <input
        name="UNITS_HABIT_LT3"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Habitable Rooms = 3
      </div>
      <input
        name="UNITS_HABIT_3"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Habitable Rooms &gt; 3
      </div>
      <input
        name="UNITS_HABIT_GT3"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Guest Rooms &lt; 30
      </div>
      <input
        name="UNITS_GUEST_LT30"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        rooms
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Guest Rooms 30-60
      </div>
      <input
        name="UNITS_GUEST_30-60"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        rooms
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Guest Rooms &gt; 60
      </div>
      <input
        name="UNITS_GUEST_GT60"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        rooms
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Condos Units &lt; 6
      </div>
      <input
        name="UNITS_CONDO_LT6"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Condos Units &gt;= 6
      </div>
      <input
        name="UNITS_CONDO_GTE6"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Condo Units &gt;=6 (congested area)
      </div>
      <input
        name="UNITS_CONDO_CONGESTED"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # TOC-ABB 744 Mixed Income Bedrooms
      </div>
      <input
        name="UNITS_AB744_MIXED"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        bedroom
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # TOC-ABB 744 Affordable incl Sr.
      </div>
      <input
        name="UNITS_AB744_AFF_SR"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # TOC-ABB 744 Special Needs
      </div>
      <input
        name="UNITS_AB744_AFF_SPECIAL"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # TOC-ABB 744 Eligible Housing Development
      </div>
      <input
        name="UNITS_AB744_ELIGIBLE"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Density Bonus Opt 1 Bedrooms &lt;= 1
      </div>
      <input
        name="UNITS_DENSITY_OPT1_LTE1"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Density Bonus Opt 1 Bedrooms 2-3
      </div>
      <input
        name="UNITS_DENSITY_OPT1_2-3"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Density Bonus Opt 1 Bedrooms GTE4
      </div>
      <input
        name="UNITS_DENSITY_OPT1_GTE4"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Density Bonus Opt 2 Restricted Unit
      </div>
      <input
        name="UNITS_DENSITY_OPT2_RESTRICTED"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Density Bonus Opt 2 Disabled
      </div>
      <input
        name="UNITS_DENSITY_OPT2_DISABLED"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Density Bonus Opt 2 Residential Hotel
      </div>
      <input
        name="UNITS_DENSITY_OPT2_HOTEL"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Senior Independent Housing
      </div>
      <input
        name="UNITS_SR_INDEPENDENT"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Assisted Living Care Unit
      </div>
      <input
        name="UNITS_SR_ASSISTED"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        dwelling units
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Assisted Living Care Guest Rooms
      </div>
      <input
        name="UNITS_SR_ASSISTED_GUEST"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        guest rm
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Skilled Nursing Care Housing Beds
      </div>
      <input
        name="UNITS_SKILLED_NURSING"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        guest bed
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Alzheimer's / Dementia Care Housing
      </div>
      <input
        name="UNITS_DEMENTIA"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        guest bed
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
  </fieldset>,
  <fieldset
    style={
      Object {
        "margin": "0.75em",
      }
    }
  >
    <legend>
      <h4>
        Land Use - Commercial
      </h4>
       
    </legend>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sq Ft - Restaurant/Bar/General
      </div>
      <input
        name="SF_RESTAURANT"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        sq ft
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sq Ft - Health Club
      </div>
      <input
        name="SF_HEALTH_CLUB"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        sq ft
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sql Ft - Restaurant &lt; 1000 sq ft
      </div>
      <input
        name="SF_RESTAURANT_SMALL"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        sq ft
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sq Ft - Take-out Restaurant
      </div>
      <input
        name="SF_RESTAURANT_TAKEOUT"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        sq ft
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sq Ft - Retail
      </div>
      <input
        name="SF_RETAIL"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        sq ft
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sq Ft - Office, Business, Manufacturing, Industrial
      </div>
      <input
        name="SF_OFFICE"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        sq ft
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sq Ft - Retail Furniture
      </div>
      <input
        name="SF_FURNITURE"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        sq ft
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sq Ft - Warehouse &gt; 10,000 sq ft
      </div>
      <input
        name="SF_WAREHOUSE"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        sq ft
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sq Frt - Small Warehouse (&lt;=10,000 sf)
      </div>
      <input
        name="SF_WAREHOUSE_SMALL"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        sq ft
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
  </fieldset>,
  <fieldset
    style={
      Object {
        "margin": "0.75em",
      }
    }
  >
    <legend>
      <h4>
        Land Use - Institutional
      </h4>
       
    </legend>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Patient Hospital Beds
      </div>
      <input
        name="BED_HOSPITAL"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        beds
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sq Ft - Medical Offices, Clinics, Service Facilities
      </div>
      <input
        name="SF_INST_MEDICAL_SVC"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        sq ft
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sq Ft - Other Institutional
      </div>
      <input
        name="SF_INST_OTHER"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        sq ft
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sq Ft - Government Institution
      </div>
      <input
        name="SF_INST_GOV"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        spaces
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Convalescent Institution Beds
      </div>
      <input
        name="BED_CONVALESCENT"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        beds
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
  </fieldset>,
  <fieldset
    style={
      Object {
        "margin": "0.75em",
      }
    }
  >
    <legend>
      <h4>
        Land Use - Other
      </h4>
       
    </legend>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        # Seats - Auditorium
      </div>
      <input
        name="SEAT_AUDITORIUM"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        seats
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sq Ft - Auditorium w/o Seats
      </div>
      <input
        name="SF_AUDITORIUM_NO_SEATS"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        sq ft
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Elementary School Classrooms
      </div>
      <input
        name="CLASSROOM_SCHOOL"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        classrooms
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": "0.2em",
        }
      }
    >
      <div
        style={
          Object {
            "flexBasis": "75%",
            "flexGrow": "1",
            "flexShrink": "1",
          }
        }
      >
        Sq Ft. - Trade School
      </div>
      <input
        name="SF_TRADE_SCHOOL"
        onChange={[Function]}
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
          }
        }
        type="number"
        value=""
      />
      <div
        style={
          Object {
            "flexBasis": "10%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
          }
        }
      >
        sq ft
      </div>
      <div
        style={
          Object {
            "flexBasis": "5%",
            "flexGrow": "0",
            "flexShrink": "1",
            "marginLeft": "1em",
            "marginRight": "0.5em",
            "textAlign": "right",
          }
        }
      />
    </div>
  </fieldset>,
]
`;

exports[`Storyshots TdmCalculation default 1`] = `
<div>
  <div
    style={
      Object {
        "margin": "1em",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "0.5em",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "margin": "-0.5em",
          }
        }
      >
        <div
          className="tdm-calculation-metrics-panel"
        >
          <h3>
            A + B
          </h3>
          <div
            style={
              Object {
                "flexBasis": "50%",
                "fontSize": "2em",
              }
            }
          >
            21
          </div>
          <div>
             
            beans
          </div>
        </div>
        <div
          className="tdm-calculation-metrics-panel"
        >
          <h3>
            A * B
          </h3>
          <div
            style={
              Object {
                "flexBasis": "50%",
                "fontSize": "2em",
              }
            }
          >
            68
          </div>
          <div>
             
            beans
          </div>
        </div>
        <div
          className="tdm-calculation-metrics-panel"
        >
          <h3>
            Hypotenuse of Triangle with Sides A and B
          </h3>
          <div
            style={
              Object {
                "flexBasis": "50%",
                "fontSize": "2em",
              }
            }
          >
            17.46424919657298
          </div>
          <div>
             
            beans
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <div
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <h2>
          Project Parameters
        </h2>
        <fieldset
          style={
            Object {
              "margin": "0.75em",
            }
          }
        >
          <legend>
            <h4 />
             
          </legend>
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "margin": "0.2em",
              }
            }
          >
            <div
              style={
                Object {
                  "flexBasis": "75%",
                  "flexGrow": "1",
                  "flexShrink": "1",
                }
              }
            >
              Input Integer A
            </div>
            <input
              name="INPUT_INTEGER_A"
              onChange={[Function]}
              style={
                Object {
                  "flexBasis": "10%",
                  "flexGrow": "0",
                  "flexShrink": "1",
                }
              }
              type="number"
              value={4}
            />
            <div
              style={
                Object {
                  "flexBasis": "10%",
                  "flexGrow": "0",
                  "flexShrink": "1",
                  "marginLeft": "1em",
                }
              }
            >
              beans
            </div>
            <div
              style={
                Object {
                  "flexBasis": "5%",
                  "flexGrow": "0",
                  "flexShrink": "1",
                  "marginLeft": "1em",
                  "marginRight": "0.5em",
                  "textAlign": "right",
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "margin": "0.2em",
              }
            }
          >
            <div
              style={
                Object {
                  "flexBasis": "75%",
                  "flexGrow": "1",
                  "flexShrink": "1",
                }
              }
            >
              Input Integer B
            </div>
            <input
              name="INPUT_INTEGER_B"
              onChange={[Function]}
              style={
                Object {
                  "flexBasis": "10%",
                  "flexGrow": "0",
                  "flexShrink": "1",
                }
              }
              type="number"
              value={17}
            />
            <div
              style={
                Object {
                  "flexBasis": "10%",
                  "flexGrow": "0",
                  "flexShrink": "1",
                  "marginLeft": "1em",
                }
              }
            >
              beans
            </div>
            <div
              style={
                Object {
                  "flexBasis": "5%",
                  "flexGrow": "0",
                  "flexShrink": "1",
                  "marginLeft": "1em",
                  "marginRight": "0.5em",
                  "textAlign": "right",
                }
              }
            />
          </div>
        </fieldset>
      </div>
      <div
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <h2>
           Transportation Demand Strategies
        </h2>
      </div>
    </div>
  </div>
</div>
`;
